<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_add_department_height" >

    <EditText
        android:id="@+id/edSubDepartmentOldName"
        android:layout_width="@dimen/ed_department_name_width"
        android:layout_height="@dimen/ed_department_name_height"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_department_old_name"
        android:enabled="false"
        android:inputType="text" />

    <EditText
        android:id="@+id/edSubDepartmentNewName"
        android:layout_width="@dimen/ed_department_name_width"
        android:layout_height="@dimen/ed_department_name_height"
        android:layout_below="@+id/edSubDepartmentOldName"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_department_new_name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/btn_add_deparment_width"
        android:layout_height="@dimen/btn_add_deparment_height"
        android:layout_below="@+id/edSubDepartmentNewName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/btn_add_deparment_margin_top"
        android:text="@string/ok_text" />

</RelativeLayout>